--- a/.github/workflows/update-expirations.yml
+++ b/.github/workflows/update-expirations.yml
@@ -37,6 +37,12 @@ jobs:
           git commit -m "chore: update expirations.json" || echo "No changes"
           git push
 
+# uploade l'artefact docs/ pour le passer au job deploy
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./docs
+          
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -44,13 +50,16 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./docs
-      - name: Deploy to Pages
-        id: deployment
+      #- uses: actions/checkout@v4
+      #- name: Setup Pages
+      #  uses: actions/configure-pages@v5
+      #- name: Upload artifact
+      #  uses: actions/upload-pages-artifact@v3
+      #  with:
+      #    path: ./docs
+      #- name: Deploy to Pages
+      #  id: deployment
+      #  uses: actions/deploy-pages@v4
+      - uses: actions/configure-pages@v5
+      - id: deployment
         uses: actions/deploy-pages@v4
